<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainClass.ChangePassActivity">
    <include layout="@layout/custom_toobar" />
    <ImageView
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
android:layout_marginBottom="30dp"
        android:src="@drawable/logoappc" />
    <EditText
        android:id="@+id/edtPassold"
        android:background="@drawable/custom_edittextsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:hint="@string/cspmatkhaucu"
        />
    <EditText
        android:id="@+id/edtPassnew"
        android:background="@drawable/custom_edittextsearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:inputType="textPassword"
        android:padding="5dp"
        android:layout_margin="10dp"
        android:hint="@string/cspmatkhaumoi"
        />
    <EditText
        android:id="@+id/edtPassnew2"
        android:background="@drawable/custom_edittextsearch"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"

        android:padding="5dp"
        android:layout_margin="10dp"
        android:hint="@string/cspnhaplai"
        />
    <Button
        android:id="@+id/btnSavePass"
        android:background="@drawable/custombt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/ttbtnluu"/>

</LinearLayout>
