<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EE3F3A"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.nf.vi.needfoodshipper.MainClass.LoginActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"

        android:src="@drawable/logoappc" />

    <LinearLayout
        android:id="@+id/ln0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"

        android:orientation="vertical"
>


        <EditText
            android:id="@+id/edtSdt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/cusedtwhite"
            android:padding="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/loginhinsodienthoai"
            android:inputType="phone" />


        <EditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/loginhinmatkhau"
            android:padding="5dp"

            android:background="@drawable/cusedtwhite"
            android:inputType="textPassword" />


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ln0"
android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/custombtnlogin"
        android:padding="10dp"
        android:text="@string/logindangnhap"
        android:textColor="@color/red"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"

        android:layout_marginTop="20dp"
        android:text="@string/loginquenmatkhau"
        android:textColor="@color/white"
        android:textSize="18dp" />


</LinearLayout>
