<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:background="@drawable/customre"
    android:orientation="vertical"
    android:padding="10dp">


    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"></RatingBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnDFinish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/custombt"
            android:text="@string/ctbtnhoanthanh"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDCancel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/custombt"
            android:text="@string/ctbtnhuy2"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvDTieude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/dltext2"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/edfedd"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@+id/tvDTieude"
                android:layout_marginBottom="5dp"
                android:background="@color/white"
                android:gravity="top"
                android:hint="@string/ctphanhoi"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edfedd"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/btnDSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/custombt2"
                        android:text="@string/ctbtngui"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btnDDeny"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/custombt2"
                        android:text="@string/ctbtnhuy"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</LinearLayout>