<?xml version="1.0" encoding="utf-8"?>
<com.nf.vi.needfoodshipper.SupportClass.WrapSliding xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slide"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:content="@+id/content"
    android:handle="@+id/handle"
    android:orientation="vertical"
    android:translationZ="9dp">

    <RelativeLayout
        android:id="@+id/handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/handleimg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView

                android:id="@+id/imgflit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:src="@drawable/upb" />


            <TextView
                android:id="@+id/textflit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/lskeolen"
                android:textAlignment="center"
                android:textColor="@color/white" />


        </LinearLayout>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edtSearch1"
            android:hint="@string/lsedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custom_edittextsearch"
            android:padding="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="5dp"

                android:text="@string/lstu" />

            <TextView
                android:id="@+id/tvngaydi"
                android:layout_width="100dp"
                android:layout_height="wrap_content"

                android:layout_margin="5dp"
                android:background="@drawable/custom_edittextsearch"

                android:gravity="center"

                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_margin="5dp"
                android:padding="5dp"
                android:text="@string/lsden" />

            <TextView
                android:id="@+id/tvngayden"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/custom_edittextsearch"

                android:gravity="center"

                android:padding="5dp" />

        </LinearLayout>


        <Button
            android:id="@+id/btnflitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/custombt"
            android:text="@string/lsbtloc"
            android:textColor="@color/white" />
    </LinearLayout>
</com.nf.vi.needfoodshipper.SupportClass.WrapSliding>