<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/white"
    android:orientation="vertical"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lntop"
        android:padding="10dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="Lê Văn Lương"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_height="10dp"
                    android:id="@+id/imgstt"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/graydot"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textstt"
                    android:layout_gravity="center_vertical"
                    android:text="@string/strnew"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cttenhang"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3kg Cá hồi + 4kg Rau cải"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctdiachi"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvloc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3kg Cá hồi + 4kg Rau cải"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctlienhe"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvct"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3kg Cá hồi + 4kg Rau cải"
                android:textColor="@color/black" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ctthoigiannhan"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvtm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3kg Cá hồi + 4kg Rau cải"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cttongtien"

                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvpay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3kg Cá hồi + 4kg Rau cải"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
